<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="saugat.splashscreen_slide.activity.Login">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_uName"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/textView_uName"
                android:layout_toLeftOf="@+id/textView_uName"
                android:layout_toStartOf="@+id/textView_uName"
                android:src="@mipmap/uname"
                tools:layout_editor_absoluteX="94dp"
                tools:layout_editor_absoluteY="121dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_uName"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/username"
                android:textSize="24dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="false"
                app:passwordToggleTint="#000"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="128dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_uName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_pwd"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/imageView_uName"
                android:layout_alignStart="@+id/imageView_uName"
                android:layout_below="@+id/imageView_uName"
                android:layout_marginTop="15dp"
                android:src="@mipmap/password"
                tools:layout_editor_absoluteX="94dp"
                tools:layout_editor_absoluteY="121dp" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_pwd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView_uName"
                android:layout_alignStart="@+id/textView_uName"
                android:layout_below="@+id/textView_uName"
                android:hint="@string/password"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editText_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/imageView_pwd"
            android:layout_alignStart="@+id/imageView_pwd"
            android:layout_below="@+id/imageView_pwd"
            android:layout_marginTop="37dp"
            android:background="@color/colorPrimary"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textColor="#00f"
            android:gravity="center"/>

    </LinearLayout>
    </LinearLayout>
</LinearLayout>
